# gpm

./: pyproject.toml
.github/: README.md  TODO.md
gpm/: cli.py  data.txt  main.py  model.py  pipeline.py  vocabulary.py
notebooks/: demo.ipynb
