[tool.poetry]
name = "gpm"
version = "0.1.1"
description = "GPM: Generative Password Manager."
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
tensorflow = ">=2.14"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
